ASSERT in WebResourceLoadScheduler::scheduleLoad with a crashed NetworkProcess. <rdar://problem/12924845> and https://bugs.webkit.org/show_bug.cgi?id=105646

Reviewed by Alexey Proskuryakov.

If we fail to schedule a loader with the NetworkProcess it is probably because the NetworkProcess crashed.

Since these loaders will never succeed in loading we should schedule them to fail on a timer.

* WebProcess/Network/WebResourceLoadScheduler.cpp:
(WebKit::WebResourceLoadScheduler::WebResourceLoadScheduler):
(WebKit::WebResourceLoadScheduler::scheduleLoad):
(WebKit::WebResourceLoadScheduler::addUnschedulableLoad):
(WebKit::WebResourceLoadScheduler::unscheduledLoadTimerFired):
(WebKit::WebResourceLoadScheduler::remove):
* WebProcess/Network/WebResourceLoadScheduler.h:

Canonical link: https://commits.webkit.org/123882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138397 268f45cc-cd09-0410-ab3c-d52691b4dbfc